--- a/meltano.yml
+++ b/meltano.yml
@@ -1,5 +1,6 @@
 version: 1
 send_anonymous_usage_stats: true
+ui.authentication: true
 forwarded_allow_ips: '*'
 session_cookie_secure: true
 project_id: 8d73bee1-5b29-467d-8df7-4d6c5d24b72b
@@ -87,3 +88,5 @@ schedules:
   transform: run
   interval: '@once'
   start_date: 2021-03-04 17:25:38.390109
+  env:
+    TARGET_BIGQUERY_PROJECT_ID: telemetry-187418
