--- a/meltano.yml
+++ b/meltano.yml
@@ -215,9 +215,17 @@ plugins:
 schedules:
 - name: ip-hash
   extractor: tap-postgres--telemetry
-  loader: pipelinewise-target-bigquery
+  loader: pipelinewise-target-bigquery--telemetry
   transform: run
   interval: '@once'
   start_date: 2021-03-04 17:25:38.390109
   env:
     TARGET_BIGQUERY_PROJECT_ID: telemetry-187418
+- name: kdp-elt
+  extractor: tap-postgres--kdp
+  loader: pipelinewise-target-bigquery--kdp
+  transform: run
+  interval: '@once'
+  start_date: 2021-06-14 17:25:38.390109
+  env:
+    TARGET_BIGQUERY_PROJECT_ID: kolibri-data-portal
