--- a/meltano.yml
+++ b/meltano.yml
@@ -83,9 +83,9 @@ plugins:
     - public-logger_examlog.*
     - public-logger_masterylog.*
     - public-logger_usersessionlog.*
-    - public-morango_certificate.*
-    - public-morango_syncsession.*
-    - public-morango_transfersession.*
+    #- public-morango_certificate.*
+    #- public-morango_syncsession.*
+    #- public-morango_transfersession.*
     metadata:
       public-exams_exam:
         replication-method: FULL_TABLE
@@ -139,12 +139,12 @@ plugins:
         replication-method: FULL_TABLE
       public-logger_usersessionlog:
         replication-method: FULL_TABLE
-      public-morango_certificate:
-        replication-method: FULL_TABLE
-      public-morango_syncsession:
-        replication-method: FULL_TABLE
-      public-morango_transfersession:
-        replication-method: FULL_TABLE
+      #public-morango_certificate:
+        #replication-method: FULL_TABLE
+      #public-morango_syncsession:
+        #replication-method: FULL_TABLE
+      #public-morango_transfersession:
+        #replication-method: FULL_TABLE
 
   - name: tap-postgres--studio
     inherit_from: tap-postgres
