--- a/meltano.yml
+++ b/meltano.yml
@@ -354,7 +354,7 @@ schedules:
   extractor: tap-postgres--telemetry
   loader: pipelinewise-target-bigquery--telemetry
   transform: skip
-  interval: 0 4 * * *
+  interval: 0 4 * * 1,2,5
   start_date: 2021-03-04 17:25:38.390109
   env:
     TARGET_BIGQUERY_PROJECT_ID: telemetry-187418
@@ -362,7 +362,7 @@ schedules:
   extractor: tap-postgres--kdp
   loader: pipelinewise-target-bigquery--kdp
   transform: skip
-  interval: 0 4 * * *
+  interval: 0 4 * * 1,2,5
   start_date: 2021-06-14 17:25:38.390109
   env:
     TARGET_BIGQUERY_PROJECT_ID: kolibri-data-portal
